--- a/2_Basic Data Types.ipynb
+++ b/2_Basic Data Types.ipynb
@@ -28,12 +28,202 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    N = int(input())\n",
+    "\n",
+    "    list = []\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        temp = (input().split())\n",
+    "        \n",
+    "        if temp[0] == 'insert':\n",
+    "            list.insert(int(temp[1]), int(temp[2]))\n",
+    "        elif temp[0] == 'print':\n",
+    "            print(list)\n",
+    "        elif temp[0] == 'remove':\n",
+    "            list.remove(int(temp[1]))\n",
+    "        elif temp[0] == 'append':\n",
+    "            list.append(int(temp[1]))\n",
+    "        elif temp[0] == 'sort':\n",
+    "            list.sort()\n",
+    "        elif temp[0] == 'pop':\n",
+    "            list.pop()\n",
+    "        elif temp[0] == 'reverse':\n",
+    "            list.reverse()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an integer, $n$, and $n$ space-separated integers as input, create a tuple, $t$, of those $n$integers. Then compute and print the result of  $hash(t)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    N = int(input())"
+    "    n = int(input())\n",
+    "    integer_list = map(int, input().split())\n",
+    "    \n",
+    "    t = tuple(integer_list)\n",
+    "    \n",
+    "    print(hash(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# List Comprehensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's learn about list comprehensions! You are given three integers $X, Y$ and $Z$ representing the dimensions of a cuboid along with an integer $N$. You have to print a list of all possible coordinates given by $(i, j, k)$ on a 3D grid where the sum of $i + j + k$ is not equal to . Here, $0\\leq i \\leq X; 0\\leq j \\leq Y; 0\\leq k \\leq Z$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    x = int(input())\n",
+    "    y = int(input())\n",
+    "    z = int(input())\n",
+    "    n = int(input())\n",
+    "    \n",
+    "    print([[i, j, k]   for i in range(x + 1) \\\n",
+    "                       for j in range(y + 1)\\\n",
+    "                       for k in range(z + 1) \\\n",
+    "                       if ( ( i + j + k ) != n )])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find the Second Largest Number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are given $n$ numbers. Store them in a list and find the second largest number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    inputNum = list(map(int, input().split()))\n",
+    "    \n",
+    "    arr = list(set(inputNum))\n",
+    "    arr.sort()\n",
+    "    \n",
+    "    print(arr[len(arr) - 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nested Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the names and grades for each student in a Physics class of $N$ students, store them in a nested list and print the name(s) of any student(s) having the second lowest grade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    n = int(input())\n",
+    "    students = [[input(), float(input())] for _ in range(n)]\n",
+    "    \n",
+    "    \n",
+    "    arr = sorted(list(set(score for name, score in students)))\n",
+    "    \n",
+    "    \n",
+    "    print('\\n'.join([name for name, score in sorted(students) if score == arr[1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finding the percentage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You have a record of $N$ students. Each record contains the student's name, and their percent marks in Maths, Physics and Chemistry. The marks can be floating values. The user enters some integer $N$ followed by the names and marks for $N$ students. You are required to save the record in a dictionary data type. The user then enters a student's name. Output the average percentage marks obtained by that student, correct to two decimal places."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    \n",
+    "    student_marks = {}\n",
+    "    \n",
+    "    for _ in range(n):\n",
+    "        name, *line = input().split()\n",
+    "        scores = list(map(float, line))\n",
+    "        student_marks[name] = scores\n",
+    "        \n",
+    "    query_name = input()\n",
+    "\n",
+    "    result = sum(student_marks[query_name]) / 3\n",
+    "    \n",
+    "    print('%.2f'%result)"
    ]
   }
  ],
@@ -42,18 +232,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
   }
  },
  "nbformat": 4,
