--- a/7_Collections.ipynb
+++ b/7_Collections.ipynb
@@ -345,7 +345,150 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "n = int(input())\n",
+    "lists = OrderedDict()\n",
+    "\n",
+    "for i in range(n):\n",
+    "    item = input()\n",
+    "    lists[item] = lists.get(item, 0) + 1\n",
+    "\n",
+    "print(len(lists))\n",
+    "print(*lists.values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collections.deque()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "collections.deque()\n",
+    "\n",
+    "A deque is a double-ended queue. It can be used to add or remove elements from both ends.\n",
+    "\n",
+    "Deques support thread safe, memory efficient appends and pops from either side of the deque with approximately the same $O(1)$ performance in either direction.\n",
+    "\n",
+    "Click on the link to learn more about **deque() methods**.\n",
+    "Click on the link to learn more about various approaches to working with deques: **Deque Recipes**.\n",
+    "\n",
+    "```python\n",
+    ">>> from collections import deque\n",
+    ">>> d = deque()\n",
+    ">>> d.append(1)\n",
+    ">>> print d\n",
+    "deque([1])\n",
+    ">>> d.appendleft(2)\n",
+    ">>> print d\n",
+    "deque([2, 1])\n",
+    ">>> d.clear()\n",
+    ">>> print d\n",
+    "deque([])\n",
+    ">>> d.extend('1')\n",
+    ">>> print d\n",
+    "deque(['1'])\n",
+    ">>> d.extendleft('234')\n",
+    ">>> print d\n",
+    "deque(['4', '3', '2', '1'])\n",
+    ">>> d.count('1')\n",
+    "1\n",
+    ">>> d.pop()\n",
+    "'1'\n",
+    ">>> print d\n",
+    "deque(['4', '3', '2'])\n",
+    ">>> d.popleft()\n",
+    "'4'\n",
+    ">>> print d\n",
+    "deque(['3', '2'])\n",
+    ">>> d.extend('7896')\n",
+    ">>> print d\n",
+    "deque(['3', '2', '7', '8', '9', '6'])\n",
+    ">>> d.remove('2')\n",
+    ">>> print d\n",
+    "deque(['3', '7', '8', '9', '6'])\n",
+    ">>> d.reverse()\n",
+    ">>> print d\n",
+    "deque(['6', '9', '8', '7', '3'])\n",
+    ">>> d.rotate(3)\n",
+    ">>> print d\n",
+    "deque(['8', '7', '3', '6', '9'])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perform append, pop, popleft and appendleft methods on an empty deque $d$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "n = int(input())\n",
+    "d = deque()\n",
+    "\n",
+    "for i in range(n):\n",
+    "    temp = input().split()\n",
+    "    \n",
+    "    if temp[0] == 'append':\n",
+    "        d.append(temp[1])\n",
+    "    elif temp[0] == 'appendleft':\n",
+    "        d.appendleft(temp[1])\n",
+    "    elif temp[0] == 'pop':\n",
+    "        d.pop()\n",
+    "    elif temp[0] == 'popleft':\n",
+    "        d.popleft()\n",
+    "        \n",
+    "print(*d)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Piling Up!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a horizontal row of $n$ cubes. The length of each cube is given. You need to create a new vertical pile of cubes. The new pile should follow these directions: if $cube_i$ is on top of $cube_j$ then $sideLength_j \\geq sideLength_i$.\n",
+    "\n",
+    "When stacking the cubes, you can only pick up either the leftmost or the rightmost cube each time. Print \"Yes\" if it is possible to stack the cubes. Otherwise, print \"No\". Do not print the quotation marks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "testCases = int(input())\n",
+    "\n",
+    "for i in range(testCases):\n",
+    "    n = int(input())\n",
+    "    cubes = list(map(int, input().split()))\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
